Avance de agente generico rest.

--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,19 @@ Integration.Orchestrator.Backend.Api/bin/
 Integration.Orchestrator.Backend.Api/obj/
 Integration.Orchestrator.Backend.Application.Tests/bin/
 Integration.Orchestrator.Backend.Application.Tests/obj/
+Integration.Orchestrator.Backend.Application/bin/Debug/net8.0/Integration.Orchestrator.Backend.Domain.dll
 Integration.Orchestrator.Backend.Application/bin/
 Integration.Orchestrator.Backend.Application/obj/
+Integration.Orchestrator.Backend.Domain.Tests/bin/Debug/net8.0/Microsoft.TestPlatform.CommunicationUtilities.dll
 Integration.Orchestrator.Backend.Domain.Tests/bin/
 Integration.Orchestrator.Backend.Domain.Tests/obj/
-Integration.Orchestrator.Backend.Domain/
+Integration.Orchestrator.Backend.Domain/bin/
+Integration.Orchestrator.Backend.Domain/obj/
 Integration.Orchestrator.Backend.Infrastructure.Tests/bin/
 Integration.Orchestrator.Backend.Infrastructure.Tests/obj/
-Integration.Orchestrator.Backend.Infrastructure/bin/
 Integration.Orchestrator.Backend.Infrastructure/obj/
+Integration.Orchestrator.Backend.Infrastructure/bin/
+.vs/Integration.Orchestrator.Backend/DesignTimeBuild/.dtbcache.v2
+.vs/Integration.Orchestrator.Backend/FileContentIndex/079dceb8-3c72-4244-8324-076cedade1e1.vsidx
+.vs/Integration.Orchestrator.Backend/FileContentIndex/6f59f5c5-f145-452c-8445-a559897c4d7f.vsidx
+.vs/Integration.Orchestrator.Backend/v17/.futdcache.v2
