endpoints de prueba

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Integration.Orchestrator.Backend.Infrastructure/bin/
 .vs/Integration.Orchestrator.Backend/FileContentIndex/6f59f5c5-f145-452c-8445-a559897c4d7f.vsidx
 .vs/Integration.Orchestrator.Backend/v17/.futdcache.v2
 *.vsidx
+/.vs/Integration.Orchestrator.Backend/v17/.suo
