--- a/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
+++ b/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Handlers\Adminitrations\" />
+    <Folder Include="Handlers\Integrations\" />
+    <Folder Include="Models\Adminitrations\" />
+    <Folder Include="Models\Integrations\" />
   </ItemGroup>
 
   <ItemGroup>
