--- a/Integration.Orchestrator.Backend.Domain/Integration.Orchestrator.Backend.Domain.csproj
+++ b/Integration.Orchestrator.Backend.Domain/Integration.Orchestrator.Backend.Domain.csproj
@@ -27,4 +27,15 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Integrations\" />
+    <Folder Include="Entities\Adminitrations\" />
+    <Folder Include="Ports\Adminitrations\" />
+    <Folder Include="Ports\Integrations\" />
+    <Folder Include="Resources\Adminitrations\" />
+    <Folder Include="Resources\Integrations\" />
+    <Folder Include="Services\Adminitrations\" />
+    <Folder Include="Services\Integrations\" />
+  </ItemGroup>
+
 </Project>
