--- a/Integration.Orchestrator.Backend.Api.Tests/Integration.Orchestrator.Backend.Api.Tests.csproj
+++ b/Integration.Orchestrator.Backend.Api.Tests/Integration.Orchestrator.Backend.Api.Tests.csproj
@@ -21,4 +21,9 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Adminitrations\" />
+    <Folder Include="Integrations\" />
+  </ItemGroup>
+
 </Project>
