--- a/Integration.Orchestrator.Backend.Domain/Integration.Orchestrator.Backend.Domain.csproj
+++ b/Integration.Orchestrator.Backend.Domain/Integration.Orchestrator.Backend.Domain.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Mapster.Core" Version="1.2.1" />
+    <PackageReference Include="Mapster.Immutable" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
   </ItemGroup>
 
