Se crea adaptador de mongo en infraestructura. Se implementa lógica para registrar colecciones en mongo. Se realiza inyección de adaptador mongoDB a capa de presentación. Se implementa control de errores para validaciones de request en la capa de aplicación. Se implementan tests de Domain.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Integration.Orchestrator.Backend.Infrastructure/bin/
 *.vsidx
 /.vs/Integration.Orchestrator.Backend/v17/.suo
 /.vs/Integration.Orchestrator.Backend/v17/.suo
+/.vs/Integration.Orchestrator.Backend/v17/TestStore/0
