--- a/Integration.Orchestrator.Backend.Domain/Integration.Orchestrator.Backend.Domain.csproj
+++ b/Integration.Orchestrator.Backend.Domain/Integration.Orchestrator.Backend.Domain.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Mapster.Core" Version="1.2.1" />
     <PackageReference Include="Mapster.Immutable" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.25.0" />
   </ItemGroup>
 
   <ItemGroup>
