--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -14,7 +14,8 @@
     "Collections": {
       "Synchronization": "Integration_Synchronization",
       "SynchronizationStates": "Integration_SynchronizationStates",
-      "Connection": "Integration_Connection"
+      "Connection": "Integration_Connection",
+      "Integration": "Integration_Integration"
 
     }
   }
