--- a/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
+++ b/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Handlers\Administration\Integration\Validators\" />
     <Folder Include="Models\Integrations\" />
   </ItemGroup>
 
