Add Enpoints Process.

--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -15,7 +15,8 @@
       "Synchronization": "Integration_Synchronization",
       "SynchronizationStates": "Integration_SynchronizationStates",
       "Connection": "Integration_Connection",
-      "Integration": "Integration_Integration"
+      "Integration": "Integration_Integration",
+      "Process": "Integration_Process"
 
     }
   }
