--- a/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
+++ b/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Folder Include="Handlers\Administration\Integration\Validators\" />
+    <Folder Include="Handlers\Administration\Process\Validators\" />
     <Folder Include="Models\Integrations\" />
   </ItemGroup>
 
