Add Crud Status.

--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -16,7 +16,8 @@
       "SynchronizationStates": "Integration_SynchronizationStates",
       "Connection": "Integration_Connection",
       "Integration": "Integration_Integration",
-      "Process": "Integration_Process"
+      "Process": "Integration_Process",
+      "Status":  "Integration_Status"
 
     }
   }
