Add Crud operator.

--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -20,7 +20,8 @@
       "Status": "Integration_Status",
       "Entity": "Integration_Entity",
       "Property": "Integration_Property",
-      "Value": "Integration_Value"
+      "Value": "Integration_Value",
+      "Operator": "Integration_Operator"
     }
   }
 }
