Se mueve archivo de configuración a folder config

--- a/Integration.Orchestrator.Backend.Api/Integration.Orchestrator.Backend.Api.csproj
+++ b/Integration.Orchestrator.Backend.Api/Integration.Orchestrator.Backend.Api.csproj
@@ -32,4 +32,10 @@
     <Folder Include="Controllers\v1\Integration\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="config\appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
