--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -21,7 +21,8 @@
       "Entity": "Integration_Entity",
       "Property": "Integration_Property",
       "Value": "Integration_Value",
-      "Operator": "Integration_Operator"
+      "Operator": "Integration_Operator",
+      "Server": "Integration_Server"
     }
   }
 }
