Se implementa crud de repository.

--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -22,7 +22,8 @@
       "Property": "Integration_Property",
       "Value": "Integration_Value",
       "Operator": "Integration_Operator",
-      "Server": "Integration_Server"
+      "Server": "Integration_Server",
+      "Repository": "Integration_Repository"
     }
   }
 }
