--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -24,7 +24,8 @@
       "Operator": "Integration_Operator",
       "Server": "Integration_Server",
       "Repository": "Integration_Repository",
-      "Adapter": "Integration_Adapter"
+      "Adapter": "Integration_Adapter",
+      "Catalog": "Integration_Catalog"
     }
   }
 }
