Se ajusta Endpoint de Catalog para creación, atualización y se agrega el de obtener por padre. Adicional se ajustan respuestas de peticiones.

--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -10,6 +10,7 @@
   },
   "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
+    //"ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
     "DatabaseName": "MxpIntegration-DEV",
     "Collections": {
       "Synchronization": "Integration_Synchronization",
