--- a/Integration.Orchestrator.Backend.Api/appsettings.Development.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "LegacyDB": {
-    "ConnectionString": "Server=localhost;Database=dbprueba;User Id=opheliaapp;Password=ADMIN;"
+    "ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/"
   },
   "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -22,8 +22,10 @@
       "Property": "Integration_Property",
       "Value": "Integration_Value",
       "Operator": "Integration_Operator",
+      "Server": "Integration_Server",
+      "Repository": "Integration_Repository",
+      "Adapter": "Integration_Adapter",
       "Catalog": "Integration_Catalog"
     }
   }
 }
-
