--- a/Integration.Orchestrator.Backend.Api/appsettings.Development.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "LegacyDB": {
-    "ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/"
+    "ConnectionString": "Server=localhost;Database=dbprueba;User Id=opheliaapp;Password=ADMIN;"
   },
   "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
