--- a/app.yml
+++ b/app.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mxpv2-orchestrator
-        image: kfcregistry.azurecr.io/mxpv2-orchestrator:latest
+        image: kfcregistry.azurecr.io/mxpv2-orchestrator
         resources:
           limits:
             memory: "128Mi"
