--- a/service.yml
+++ b/service.yml
@@ -3,11 +3,8 @@ kind: Service
 metadata:
   name: mxpv2-orchestrator
 spec:
+  type: LoadBalancer
   ports:
-    - name: http
-      protocol: TCP
-      port: 8080
-      targetPort: 8080
-  type: ClusterIP
+  - port: 80
   selector:
     app: mxpv2-orchestrator
