Ajuste de atributos de entidades y se añade logica para soportar cors.

--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -29,5 +29,10 @@
       "Catalog": "Integration_Catalog",
       "CodeConfigurator": "Integration_CodeConfigurator"
     }
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:4202"
+    ]
   }
 }
