--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ stages:
         containerRegistry: SC_ACR_GRUPOKFC_DEV
         repository: mxpv2-orchestrator
         buildContext: '$(Build.SourcesDirectory)/'
-        dockerfile: '$(Build.SourcesDirectory)'
+        dockerfile: '$(Build.SourcesDirectory)/Integration.Orchestrator.Backend.Api/Dockerfile'
         tags: |
           $(tag)
 
