--- a/app.yml
+++ b/app.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: mxpv2-orchestrator
-        image: kfcregistry.azurecr.io/mxpv2-orchestrator:dev
+        image: kfcregistry.azurecr.io/mxpv2-orchestrator:1.0.0
         ports:
         - containerPort: 8080
