Add .idea to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Integration.Orchestrator.Backend.Infrastructure/bin/
 /.vs/Integration.Orchestrator.Backend/v17/.suo
 /.vs/Integration.Orchestrator.Backend/v17/.suo
 /.vs/Integration.Orchestrator.Backend/v17/TestStore/0
+.idea/
