Estructura base para pruebas de integración.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Integration.Orchestrator.Backend.Infrastructure/bin/
 /.vs/Integration.Orchestrator.Backend/v17/.suo
 /.vs/Integration.Orchestrator.Backend/v17/.suo
 /.vs/Integration.Orchestrator.Backend/v17/TestStore/0
+/Integration.Orchestrator.Backend.Integration.Tests/obj
+/Integration.Orchestrator.Backend.Integration.Tests/bin/Debug/net8.0
