--- a/Integration.Orchestrator.Backend.Api/Integration.Orchestrator.Backend.Api.csproj
+++ b/Integration.Orchestrator.Backend.Api/Integration.Orchestrator.Backend.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -30,6 +30,12 @@
 
   <ItemGroup>
     <Folder Include="Controllers\v1\Integration\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.TestIntegrations.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 	<ItemGroup>
