--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -9,8 +9,8 @@
     "ConnectionString": "Server=localhost;Database=dbprueba;User Id=opheliaapp;Password=ADMIN;"
   },
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost:27017",
-    //"ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
+    //"ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
     "DatabaseName": "MxpIntegration-DEV",
     "Collections": {
       "Synchronization": "Integration_Synchronization",
@@ -21,8 +21,6 @@
       "Status": "Integration_Status",
       "Entity": "Integration_Entity",
       "Property": "Integration_Property",
-      "Value": "Integration_Value",
-      "Operator": "Integration_Operator",
       "Server": "Integration_Server",
       "Repository": "Integration_Repository",
       "Adapter": "Integration_Adapter",
