--- a/Integration.Orchestrator.Backend.Api/appsettings.TestIntegrations.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.TestIntegrations.json
@@ -11,7 +11,7 @@
   "MongoDB": {
     //"ConnectionString": "mongodb://localhost:27017",
     "ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
-    "DatabaseName": "MxpIntegration-DEV",
+    "DatabaseName": "MxpIntegration-DEV-Test",
     "Collections": {
       "Synchronization": "Integration_Synchronization",
       "SynchronizationStates": "Integration_SynchronizationStates",
@@ -24,13 +24,7 @@
       "Server": "Integration_Server",
       "Repository": "Integration_Repository",
       "Adapter": "Integration_Adapter",
-      "Catalog": "Integration_Catalog",
-      "CodeConfigurator": "Integration_CodeConfigurator"
+      "Catalog": "Integration_Catalog"
     }
-  },
-  "Cors": {
-    "AllowedOrigins": [
-      "http://localhost:4202"
-    ]
   }
 }
