--- a/Integration.Orchestrator.Backend.Api/appsettings.Development.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.Development.json
@@ -9,8 +9,8 @@
     "ConnectionString": "Server=localhost;Database=dbprueba;User Id=opheliaapp;Password=ADMIN;"
   },
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost:27017",
-    //"ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
+    //"ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
     "DatabaseName": "MxpIntegration-DEV",
     "Collections": {
       "Synchronization": "Integration_Synchronization",
