Se implementa logica de pruebas de integración del Configurador

--- a/Integration.Orchestrator.Backend.Api/Integration.Orchestrator.Backend.Api.csproj
+++ b/Integration.Orchestrator.Backend.Api/Integration.Orchestrator.Backend.Api.csproj
@@ -33,6 +33,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Controllers\v1\Administration\AdapterController.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="appsettings.TestIntegrations.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
