--- a/Integration.Orchestrator.Backend.Api/appsettings.TestIntegrations.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.TestIntegrations.json
@@ -11,7 +11,7 @@
   "MongoDB": {
     //"ConnectionString": "mongodb://localhost:27017",
     "ConnectionString": "mongodb+srv://uatuser:FpLaADYetnNtDagc@mxpv2uatcluster.asrvjjn.mongodb.net/",
-    "DatabaseName": "MxpIntegration-DEV-Test",
+    "DatabaseName": "MxpIntegration-TEST",
     "Collections": {
       "Synchronization": "Integration_Synchronization",
       "SynchronizationStates": "Integration_SynchronizationStates",
