[UPD] Se modifica las fecha para que se maneje con un formato Global y de tipo String

--- a/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
+++ b/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Helper\**" />
+    <EmbeddedResource Remove="Helper\**" />
+    <None Remove="Helper\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
