--- a/azure-pipelines-test.yml
+++ b/azure-pipelines-test.yml
@@ -28,7 +28,7 @@ stages:
       displayName: Run Unit Tests
       inputs:
         command: 'test'
-        projects: '**/*Tests/*Tests.csproj' # Ajusta la ruta según tu estructura de pruebas
+        projects: '**/*Tests/*.csproj' # Ajusta la ruta según tu estructura de pruebas
         arguments: '--configuration Release --no-build --collect:"Code Coverage"'
 
    
