--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
 - repo: self
 
 variables:
-  tag: 1.0.40 #'$(Build.BuildId)'
+  tag: 1.0.41 #'$(Build.BuildId)'
 
 stages:
 - stage: buildAndPush
@@ -24,7 +24,7 @@ stages:
       displayName: Build and push an image to container registry
       inputs:
         command: buildAndPush
-        containerRegistry: SC_ACR_GRUPOKFC_DEV
+        containerRegistry: SC_ACR_GRUPOKFC_DEV_2
         repository: mxpv2-orchestrator
         buildContext: '$(Build.SourcesDirectory)/'
         dockerfile: '$(Build.SourcesDirectory)/Integration.Orchestrator.Backend.Api/Dockerfile'
