feat: [UPD] Add Automapper Library

--- a/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
+++ b/Integration.Orchestrator.Backend.Application/Integration.Orchestrator.Backend.Application.csproj
@@ -7,13 +7,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Compile Remove="Helper\**" />
-		<EmbeddedResource Remove="Helper\**" />
-		<None Remove="Helper\**" />
+		<Compile Remove="Mappers\**" />
+		<EmbeddedResource Remove="Mappers\**" />
+		<None Remove="Mappers\**" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Include="Helper\MappingServerProfile.cs" />
+	  <Compile Include="Mappers\MappingCatalogProfile.cs" />
+	  <Compile Include="Mappers\MappingServerProfile.cs" />
+	  <Compile Include="Mappers\MappingSynchronizationProfile.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
