--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mxpv2-orchestrator
+  name: mxpv2-integration-admin-back-service
 spec:
   type: LoadBalancer
   ports:
   - port: 8080
   selector:
-    app: mxpv2-orchestrator
+    app: mxpv2-integration-admin-back
