feat: [UPD] GetAll Transformation

--- a/Integration.Orchestrator.Backend.Api/appsettings.Development.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.Development.json
@@ -23,7 +23,8 @@
       "Server": "Integration_Server",
       "Repository": "Integration_Repository",
       "Adapter": "Integration_Adapter",
-      "Catalog": "Integration_Catalog"
+      "Catalog": "Integration_Catalog",
+      "Transformation": "Integration_Transformation"
     }
   }
 }
