--- a/Integration.Orchestrator.Backend.Api/appsettings.json
+++ b/Integration.Orchestrator.Backend.Api/appsettings.json
@@ -24,7 +24,8 @@
       "Repository": "Integration_Repository",
       "Adapter": "Integration_Adapter",
       "Catalog": "Integration_Catalog",
-      "CodeConfigurator": "Integration_CodeConfigurator"
+      "CodeConfigurator": "Integration_CodeConfigurator",
+      "Transformation": "Integration_Transformation"
     }
   },
   "Cors": {
